assets/css/main.css
/* ... */
    /* Section/Article */

    section.special, article.special {
      text-align: center;
    }

    header p {
      font-family: "Roboto Slab", serif;
      font-size: 1em;
      font-weight: 400;
      letter-spacing: 0.075em;
      margin-top: -0.5em;
      text-transform: uppercase;
    }

    header.major > :last-child {
      border-bottom: solid 3px #ff0000;
      display: inline-block;
      margin: 0 0 1em 0;
      padding: 0 0.75em 0.5em 0;
    }

    header.main > :last-child {
      margin: 0 0 1em 0;
    }

    /* Form */

    .subscribe-cta {
      color: #3d4449;
      font-size: 1em;
    }

    .subscribe-cta-nav {
      color: #3d4449;
      font-size: 1em;
      margin: 2.0em 0 0 0;
    }

    .subscribe-input {
      display: inline !important;
      width: 50% !important;
      border-width: 2px !important;
    }

    .subscribe-input-nav {
      width: 100% !important;
      border-width: 2px !important;
      margin: 0.8em 0 0 0 !important;
    }

    .subscribe-button {
      display: inline;
      margin: 0 0 0 2.0em;
    }

    .subscribe-button-nav {
      margin: 1.0em 0 0 0;
      text-align: right;
    }

    form {
      margin: 0 0 2em 0;
    }

    label {
      color: #7f888f;
      display: block;
      font-size: 0.9em;
      font-weight: 600;
      margin: 0 0 1em 0;
    }

    input[type="text"],
    input[type="password"],
    input[type="email"],
    input[type="tel"],
    input[type="search"],
    input[type="url"],
    select,
    textarea {
      -moz-appearance: none;
      -webkit-appearance: none;
      -ms-appearance: none;
      appearance: none;
      background: #ffffff;
      border-radius: 0.375em;
      border: none;
      border: solid 1px rgba(210, 215, 217, 0.75);
      color: inherit;
      display: block;
      outline: 0;
      padding: 0 1em;
      text-decoration: none;
      width: 100%;
    }

    input[type="text"]:invalid,
    input[type="password"]:invalid,
    input[type="email"]:invalid,
    input[type="tel"]:invalid,
    input[type="search"]:invalid,
    input[type="url"]:invalid,
    select:invalid,
    textarea:invalid {
      box-shadow: none;
    }

    input[type="text"]:focus,
    input[type="password"]:focus,
    input[type="email"]:focus,
    input[type="tel"]:focus,
    input[type="search"]:focus,
    input[type="url"]:focus,
    select:focus,
    textarea:focus {
      border-color: #ff0000;
      box-shadow: 0 0 0 1px #ff0000;
    }

    select {
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(210, 215, 217, 0.75)' /%3E%3C/svg%3E");
      background-size: 1.25em;
      background-repeat: no-repeat;
      background-position: calc(100% - 1em) center;
      height: 2.75em;
      padding-right: 2.75em;
      text-overflow: ellipsis;
    }

    select option {
      color: #3d4449;
      background: #ffffff;
    }

    select:focus::-ms-value {
      background-color: transparent;
    }

    select::-ms-expand {
      display: none;
    }

    input[type="text"],
    input[type="password"],
    input[type="email"],
    input[type="tel"],
    input[type="search"],
    input[type="url"],
    select {
      height: 2.75em;
    }

    textarea {
      padding: 0.75em 1em;
    }

    input[type="checkbox"],
    input[type="radio"] {
      -moz-appearance: none;
      -webkit-appearance: none;
      -ms-appearance: none;
      appearance: none;
      display: block;
      float: left;
      margin-right: -2em;
      opacity: 0;
      width: 1em;
      z-index: -1;
    }

    input[type="checkbox"] + label,
    input[type="radio"] + label {
      text-decoration: none;
      color: #7f888f;
      cursor: pointer;
      display: inline-block;
      font-size: 1em;
      font-weight: 400;
      padding-left: 2.4em;
      padding-right: 0.75em;
      position: relative;
    }

    input[type="checkbox"] + label:before,
    input[type="radio"] + label:before {
      -moz-osx-font-smoothing: grayscale;
      -webkit-font-smoothing: antialiased;
      font-family: FontAwesome;
      font-style: normal;
      font-weight: normal;
      text-transform: none !important;
    }

    input[type="checkbox"] + label:before,
    input[type="radio"] + label:before {
      background: #ffffff;
      border-radius: 0.375em;
      border: solid 1px rgba(210, 215, 217, 0.75);
      content: '';
      display: inline-block;
      height: 1.65em;
      left: 0;
      line-height: 1.58125em;
      position: absolute;
      text-align: center;
      top: 0;
      width: 1.65em;
    }

    input[type="checkbox"]:checked + label:before,
    input[type="radio"]:checked + label:before {
      background: #3d4449;
      border-color: #3d4449;
      color: #ffffff;
      content: '\f00c';
    }

    input[type="checkbox"]:focus + label:before,
    input[type="radio"]:focus + label:before {
      border-color: #ff0000;
      box-shadow: 0 0 0 1px #ff0000;
    }

    input[type="checkbox"] + label:before {
      border-radius: 0.375em;
    }

    input[type="radio"] + label:before {
      border-radius: 100%;
    }

    ::-webkit-input-placeholder {
      color: #9fa3a6 !important;
      opacity: 1.0;
    }

    :-moz-placeholder {
      color: #9fa3a6 !important;
      opacity: 1.0;
    }

    ::-moz-placeholder {
      color: #9fa3a6 !important;
      opacity: 1.0;
    }

    :-ms-input-placeholder {
      color: #9fa3a6 !important;
      opacity: 1.0;
    }
/* ... */

